cmake_minimum_required(VERSION 3.14)
project(chapter9)

set(CMAKE_CXX_STANDARD 14)

add_executable(chapter9_1_2_3 includes/coordin/coordin.h 9_2.cpp 9_3.cpp)
add_executable(chapter9_7_8 9_7.cpp 9_8.cpp)
add_executable(chapter9_9 9_9.cpp)
add_executable(chapter9_10 9_10.cpp)
add_executable(recursive recursive.cpp)
add_executable(review review.cpp)
add_executable(review_7 review_7.cpp)
add_executable(p1_golf pp/p1/golf.h pp/p1/golf.cpp pp/p1/main.cpp)
add_executable(p_2 pp/p2/p2.cpp)
add_executable(p_3 pp/p3/p3.cpp)
add_executable(p_4 pp/p4/sales.h pp/p4/p4.cpp pp/p4/sales.cpp)

include_directories(includes/general)
include_directories(pp/p1)
include_directories(pp/p4)